--- a/templates/admin.html
+++ b/templates/admin.html
@@ -195,7 +195,7 @@
                         name="rfid"
                         class="field"
                         id="rfid"
-                        onfocus="blur()"
+                        onfocus=""
                         required
                       />
                     </div>
