--- a/static/assets/css/audienceSB.css
+++ b/static/assets/css/audienceSB.css
@@ -1,223 +1,274 @@
 body,
 html {
-    font-family: Arial, sans-serif;
-    text-align: center;
-    background-color: black;
-    color: white;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  font-family: Arial, sans-serif;
+  text-align: center;
+  background-color: black;
+  color: white;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 20px;
-    box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 20px;
+  box-sizing: border-box;
 }
 
 .content-container {
-    height: 80vh;
-    display: flex;
+  height: 80vh;
+  display: flex;
 }
 
 .details-corner {
-    display: flex;
-    flex-direction: column;
-    width: 60%;
-    gap: 5%;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  gap: 5%;
+  align-items: center;
+  justify-content: center;
 }
 
 .performing-container {
-    width: 100%;
+  width: 100%;
+}
+.performing-container .performance {
+  font-size: 2.5rem;
 }
 
 .total-score-corner {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
 h1 {
-    font-size: 5vh;
-    color: orange;
-    margin-bottom: 10px;
+  font-size: 5vh;
+  color: orange;
+  margin-bottom: 10px;
 }
 
 .highlight {
-    background-color: orange;
-    width: 50%;
-    height: 15vh;
-    color: white;
-    padding: 20px;
-    border-radius: 15px;
-    text-align: center;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 4vh;
+  background-color: orange;
+  width: 50%;
+  height: 15vh;
+  color: white;
+  padding: 20px;
+  border-radius: 15px;
+  text-align: center;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 4vh;
 }
 
 .scoreboard {
-    display: flex;
-    flex: 1;
-    justify-content: space-between;
-    gap: 50px;
-    margin-bottom: 10px;
-    align-self: center;
-    width: 100%;
+  display: flex;
+  flex: 1;
+  justify-content: space-between;
+  gap: 50px;
+  margin-bottom: 10px;
+  align-self: center;
+  width: 100%;
 }
 
 .column {
-    background: #222;
-    padding: 10px;
-    border-radius: 10px;
-    color: orange;
-    font-weight: bold;
-    width: 30vw;
-    height: auto;
+  background: #222;
+  padding: 35px 10px 10px 10px;
+  border-radius: 10px;
+  color: orange;
+  font-weight: bold;
+  width: 30vw;
+  height: auto;
 }
 
 .column p {
-    font-size: 90px;
-    margin: 0;
+  font-size: 90px;
+  margin: 0;
 }
 
 .player-info {
-    background: #222;
-    border-radius: 15px;
-    text-align: center;
-    font-size: 2vh;
-    margin-top: 5px;
-    display: flex;
-    flex-direction: column;
-    align-self: center;
-    width: 100%;
-    color: white;
+  background: #222;
+  border-radius: 15px;
+  text-align: center;
+  font-size: 2vh;
+  margin-top: 5px;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  width: 100%;
+  color: white;
+}
+
+.player-info h2 {
+  font-weight: 900;
+  font-size: 4vh;
+  color: orange;
+  margin: 0;
+  padding-top: 10px;
 }
 
 .player-info p {
-    text-align: left;
+  text-align: left;
+  font-size: 1.7rem;
 }
 
 .info-column {
-    flex: 1;
-    padding-left: 5%;
+  flex: 1;
+  padding-left: 5%;
 }
 
 .player-info .info-columns {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 20px;
 }
 
 .player-info {
-    flex: 1;
+  flex: 1;
 }
 
 .player-info strong {
-    color: orange;
+  color: orange;
 }
 
 .player-info span {
-    color: white;
+  color: white;
 }
 
 .total-score-container {
-    background-color: orange;
-    align-self: center;
-    width: 80%;
-    height: 70%;
-    color: black;
-    border-radius: 15px;
-    text-align: center;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
+  background-color: orange;
+  align-self: center;
+  width: 80%;
+  height: 70%;
+  color: black;
+  border-radius: 15px;
+  text-align: center;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .total-score-title {
-    color: black;
-    font-size: 6vh;
-    font-weight: bold;
-    margin: 0;
-    padding-top: 10px;
-    text-transform: uppercase;
+  color: black;
+  font-size: 6vh;
+  font-weight: bold;
+  margin: 0;
+  padding-top: 10px;
+  text-transform: uppercase;
 }
 
 .total-score-value {
-    font-size: 14vh;
-    font-weight: bold;
-    display: block;
-    margin-top: 10px;
-    padding-top: 10px;
+  font-size: 14vh;
+  font-weight: bold;
+  display: block;
+  margin-top: 10px;
+  padding-top: 10px;
 }
 
-
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Full Screen Containers */
+.full-screen,
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  gap: 10px;
+}
+
+.full-screen strong {
+  color: #d79447;
+}
+.winner-info strong {
+  color: #d79447;
+  font-size: 3rem;
+  font-weight: 900;
+}
+
+.trophy {
+  font-size: 9rem;
+}
+
+.full-screen h2 {
+  font-size: 5rem;
+  margin-bottom: 20px;
+}
+.winner-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.winner-info p {
+  font-size: 3rem;
+  color: white;
+  font-weight: 500;
+}
+
+.hidden {
+  display: none;
+}
+
+/* Loader Styling */
+.loader {
+  border: 6px solid #f3f3f3;
+  border-top: 6px solid #007bff;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+  margin-top: 20px;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
   }
-
-
-  /* Full Screen Containers */
-  .full-screen, .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100vh;
-
+  100% {
+    transform: rotate(360deg);
   }
-
-  .hidden {
-    display: none;
-  }
-
-  /* Loader Styling */
-  .loader {
-    border: 6px solid #f3f3f3;
-    border-top: 6px solid #007bff;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    animation: spin 1s linear infinite;
-    margin-top: 20px;
-  }
-
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
+}
 
 .loader {
-    border: 6px solid #f3f3f3;
-    border-top: 6px solid #007bff;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    animation: spin 1s linear infinite;
-    margin-top: 20px;
+  border: 6px solid #f3f3f3;
+  border-top: 6px solid #007bff;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+  margin-top: 20px;
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
   }
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+  100% {
+    transform: rotate(360deg);
   }
+}
