--- a/templates/adminSB.html
+++ b/templates/adminSB.html
@@ -75,7 +75,7 @@
           <button class="btn player1-register" onclick="">
             Register Player 1
           </button>
-          <button class="btn player1-start">Start</button>
+          <button class="btn player1-start" id="start-recording">Start</button>
           <button class="btn player1-submit" id="player1-submit">
             Submit Scores
           </button>
@@ -144,7 +144,7 @@
           </div>
           <h2 class="player2-detected" id="player2-detected">Not Register</h2>
           <button class="btn player2-register">Register Player 2</button>
-          <button class="btn player2-start">Start</button>
+          <button class="btn player2-start" id="start-recording2">Start</button>
           <button class="btn player2-submit" id="player2-submit">
             Submit Scores
           </button>
