--- a/templates/admin.html
+++ b/templates/admin.html
@@ -255,24 +255,17 @@
                     <label for="belt">Belt</label>
                     <select name="belt" class="field" id="belt" required>
                       <option value="select">Select Belt</option>
-                      <option value="White">White</option>
-                      <option value="Yellow">Yellow</option>
-                      <option value="Orange">Orange</option>
-                      <option value="Green">Green</option>
-                      <option value="Purple">Purple</option>
-                      <option value="Blue">Blue</option>
-                      <option value="Brown">Brown</option>
-                      <option value="Red">Red</option>
-                      <option value="1st Dan Black Belt">1st Dan</option>
-                      <option value="2nd Dan Black Belt">2nd Dan</option>
-                      <option value="3rd Dan Black Belt">3rd Dan</option>
-                      <option value="4th Dan Black Belt">4th Dan</option>
-                      <option value="5th Dan Black Belt">5th Dan</option>
-                      <option value="6th Dan Black Belt">6th Dan</option>
-                      <option value="7th Dan Black Belt">7th Dan</option>
-                      <option value="8th Dan Black Belt">8th Dan</option>
-                      <option value="9th Dan Black Belt">9th Dan</option>
-                      <option value="10th Dan Black Belt">10th Dan</option>
+                      <option value="Low Yellow">Low Yellow</option>
+                      <option value="High Yellow">High Yellow</option>
+                      <option value="Low Blue">Low Blue</option>
+                      <option value="High Blue">High Blue</option>
+                      <option value="Low Red">Low Red</option>
+                      <option value="High Red">High Red</option>
+                      <option value="Low Brown">Low Brown</option>
+                      <option value="High Brown">High Brown</option>
+                      <option value="1st Dan Black Belt">Black Belt: 1st Dan</option>
+                      <option value="2nd Dan Black Belt">Black Belt: 2nd Dan</option>
+                      <option value="3rd Dan Black Belt">Black Belt: 3rd Dan</option>
                     </select>
                   </div>
                 </div>
@@ -291,13 +284,13 @@
                     <label for="weight_category">Weight Category</label>
                     <select name="weight_category" class="field" id="weight_category" required>
                       <option value="select">Select Weight Category</option>
-                      <option value="Flyweight">Flyweight</option>
-                      <option value="Bantamweight">Bantamweight</option>
-                      <option value="Featherweight">Featherweight</option>
-                      <option value="Lightweight">Lightweight</option>
-                      <option value="Welterweight">Welterweight</option>
-                      <option value="Middleweight">Middleweight</option>
-                      <option value="Heavyweight">Heavyweight</option>
+                      <option value="Flyweight">Flyweight (M=58kg | F=49kg)</option>
+                      <option value="Bantamweight">Bantamweight (M=63kg | F=53g)</option>
+                      <option value="Featherweight">Featherweight (M=68kg | F=57kg)</option>
+                      <option value="Lightweight">Lightweight (M=74kg | F=62kg)</option>
+                      <option value="Welterweight">Welterweight (M=80kg | F=67kg)</option>
+                      <option value="Middleweight">Middleweight (M=87kg | F=73kg)</option>
+                      <option value="Heavyweight">Heavyweight (M=above 90kg | F=above 80kg)</option>
                     </select>
                   </div>
                 </div>
