--- a/templates/home.html
+++ b/templates/home.html
@@ -3,11 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="shortcut icon"
-      type="PTU-icon"
-      href="../static/assets/images/icon.png"
-    />
+    <link rel="shortcut icon" type="PTU-icon" href="" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.css"
@@ -17,7 +13,7 @@
     />
 
     <link rel="stylesheet" href="../static/assets/css/home.css" />
-    <title>PTU</title>
+    <title>Pooms-E 4A11</title>
   </head>
   <body>
     <nav class="nav_container">
@@ -145,7 +141,7 @@
       <div class="class__image">
         <span class="bg__blur"></span>
         <img
-          src="../static/assets/images/newclass-2.jpg"
+          src="../static/assets/images/newclass-2.png"
           alt="class"
           class="class__img-1"
         />
