--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,7 @@
     <nav class="nav_container">
       <div class="nav__logo_container">
         <a href="#" class="nav__logo">
-          <img src="../static/assets/images/icon.png" alt="logo" />
+          <img src=""  />
         </a>
       </div>
       <ul class="nav__list">
@@ -223,7 +223,7 @@
       <span class="bg__blur footer__blur"></span>
       <div class="footer__col withLogo">
         <div class="footer__logo">
-          <img src="../static/assets/images/icon.png" alt="logo" />
+          <img src=""  />
         </div>
         <p>
           Take the first step towards mastering the art of Taekwondo with our
